plugins {
    id 'java'
    id 'application'
    id 'idea'
}

application {
    mainClass = 'com.laosun.Main'
}

group = 'com.laosun'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'
    implementation 'com.google.code.gson:gson:2.14.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.jetbrains:annotations:24.0.0'
    implementation 'it.unimi.dsi:fastutil:8.5.18'
    implementation 'org.slf4j:slf4j-api:1.7.36'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
}

test {
    useJUnitPlatform()
}

/*
 * 让 `gradle run` 的输出（以及测试里的 System.out）用 UTF-8 编码。
 *
 * 为什么需要：Windows 上 JVM 默认按**平台 ANSI 编码**写 stdout（中文环境是 GBK），
 * 而现代终端 / PowerShell 7 的代码页是 UTF-8（65001）—— 两边不一致，中文全是乱码。
 * JDK 18+ 认这三个属性（file.encoding 已不再管 stdout/stderr）。
 */
tasks.withType(JavaExec).configureEach {
    jvmArgs '-Dfile.encoding=UTF-8', '-Dstdout.encoding=UTF-8', '-Dstderr.encoding=UTF-8'
}

tasks.withType(Test).configureEach {
    jvmArgs '-Dfile.encoding=UTF-8', '-Dstdout.encoding=UTF-8', '-Dstderr.encoding=UTF-8'
}

idea {
    module {
        downloadSources = true
    }
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
